test/integration/00-init/admission/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: function
spec:
  namespace: default
  skipDelete: true
  steps:
  - name: Deploy function
    try:
    - apply:
        resource:
          apiVersion: admissionregistration.k8s.io/v1beta1
          kind: MutatingAdmissionPolicy
          metadata:
            name: "skip-controller-manager-metadata-caching"
          spec:
            matchConstraints:
              resourceRules:
              - apiGroups:   ["product.webshop.harikube.info"]
                apiVersions: ["*"]
                operations:  ["CREATE"]
                resources:   ["*"]
            matchConditions:
              - name: label-does-not-exist
                expression: >
                    !has(object.metadata.labels) ||
                    !('skip-controller-manager-metadata-caching' in object.metadata.labels)
            failurePolicy: Fail
            reinvocationPolicy: IfNeeded
            mutations:
              - patchType: JSONPatch
                jsonPatch:
                  expression: >
                    has(object.metadata.labels)
                    ? [
                        JSONPatch{
                          op: "add",
                          path: "/metadata/labels/skip-controller-manager-metadata-caching",
                          value: "true"
                        }
                      ]
                    : [
                        JSONPatch{
                          op: "add",
                          path: "/metadata/labels",
                          value: {}
                        },
                        JSONPatch{
                          op: "add",
                          path: "/metadata/labels/skip-controller-manager-metadata-caching",
                          value: "true"
                        }
                      ]
    - apply:
        resource:
          apiVersion: admissionregistration.k8s.io/v1beta1
          kind: MutatingAdmissionPolicyBinding
          metadata:
            name: "skip-controller-manager-metadata-caching"
          spec:
            policyName: "skip-controller-manager-metadata-caching"
            matchResources:
              resourceRules:
              - apiGroups:   ["product.webshop.harikube.info"]
                apiVersions: ["*"]
                operations:  ["CREATE"]
                resources:   ["*"]
